Refactored PropertyName/XLinkPropertyName/Function representation in WFS query model.