@@ -47,7 +47,6 @@ import org.deegree.commons.utils.kvp.KVPUtils;
 import org.deegree.cs.persistence.CRSManager;
 import org.deegree.filter.Operator;
 import org.deegree.filter.OperatorFilter;
-import org.deegree.filter.expression.ValueReference;
 import org.deegree.filter.sort.SortProperty;
 import org.deegree.filter.spatial.Within;
 import org.deegree.geometry.Envelope;
@@ -55,6 +54,7 @@ import org.deegree.geometry.primitive.Point;
 import org.deegree.protocol.wfs.query.AdHocQuery;
 import org.deegree.protocol.wfs.query.FeatureIdQuery;
 import org.deegree.protocol.wfs.query.FilterQuery;
+import org.deegree.protocol.wfs.query.ProjectionClause;
 import org.deegree.protocol.wfs.query.Query;
 import org.junit.Test;
 
@@ -171,8 +171,8 @@ public class GetFeatureKVPAdapterTest extends TestCase {
         FilterQuery filterQuery = (FilterQuery) getFeature.getQueries().get( 0 );
         assertEquals( new QName( "INWATERA_1M" ), filterQuery.getTypeNames()[0].getFeatureTypeName() );
 
-        assertEquals( "INWATERA_1M/WKB_GEOM", filterQuery.getPropertyNames()[0].getAsText() );
-        assertEquals( "INWATERA_1M/TILE_ID", filterQuery.getPropertyNames()[1].getAsText() );
+        assertEquals( "INWATERA_1M/WKB_GEOM", filterQuery.getProjectionClauses()[0].getPropertyName().getAsText() );
+        assertEquals( "INWATERA_1M/TILE_ID", filterQuery.getProjectionClauses()[1].getPropertyName().getAsText() );
     }
 
     /**
@@ -187,8 +187,10 @@ public class GetFeatureKVPAdapterTest extends TestCase {
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
 
         List<Query> queries = getFeature.getQueries();
-        assertEquals( ( (FilterQuery) queries.get( 0 ) ).getPropertyNames()[0].getAsText(), "InWaterA_1M/wkbGeom" );
-        assertEquals( ( (FilterQuery) queries.get( 0 ) ).getPropertyNames()[1].getAsText(), "InWaterA_1M/tileId" );
+        assertEquals( ( (FilterQuery) queries.get( 0 ) ).getProjectionClauses()[0].getPropertyName().getAsText(),
+                      "InWaterA_1M/wkbGeom" );
+        assertEquals( ( (FilterQuery) queries.get( 0 ) ).getProjectionClauses()[1].getPropertyName().getAsText(),
+                      "InWaterA_1M/tileId" );
         assertEquals( ( (FilterQuery) queries.get( 0 ) ).getTypeNames()[0].getFeatureTypeName(),
                       new QName( "InWaterA_1M" ) );
     }
@@ -238,8 +240,8 @@ public class GetFeatureKVPAdapterTest extends TestCase {
         FeatureIdQuery featureId = (FeatureIdQuery) queries.get( 0 );
         assertEquals( "INWATERA_1M", featureId.getFeatureIds()[0] );
 
-        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getPropertyNames()[0][0].getAsText() );
-        assertEquals( "INWATERA_1M/TILE_ID", featureId.getPropertyNames()[0][1].getAsText() );
+        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getProjectionClauses()[0][0].getPropertyName().getAsText() );
+        assertEquals( "INWATERA_1M/TILE_ID", featureId.getProjectionClauses()[0][1].getPropertyName().getAsText() );
     }
 
     /**
@@ -252,9 +254,9 @@ public class GetFeatureKVPAdapterTest extends TestCase {
         Map<String, String> kvpMap = KVPUtils.readFileIntoMap( exampleURL );
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
-        assertEquals( ( (FeatureIdQuery) getFeature.getQueries().get( 0 ) ).getPropertyNames()[0][0].getAsText(),
+        assertEquals( ( (FeatureIdQuery) getFeature.getQueries().get( 0 ) ).getProjectionClauses()[0][0].getPropertyName().getAsText(),
                       "InWaterA_1M/wkbGeom" );
-        assertEquals( ( (FeatureIdQuery) getFeature.getQueries().get( 0 ) ).getPropertyNames()[0][1].getAsText(),
+        assertEquals( ( (FeatureIdQuery) getFeature.getQueries().get( 0 ) ).getProjectionClauses()[0][1].getPropertyName().getAsText(),
                       "InWaterA_1M/tileId" );
         FeatureIdQuery featureId = (FeatureIdQuery) getFeature.getQueries().get( 0 );
         assertEquals( featureId.getFeatureIds()[0], "InWaterA_1M.1013" );
@@ -313,14 +315,14 @@ public class GetFeatureKVPAdapterTest extends TestCase {
         assertEquals( "INWATERA_1M.1014", featureId.getFeatureIds()[1] );
         assertEquals( "INWATERA_1M.1015", featureId.getFeatureIds()[2] );
 
-        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getPropertyNames()[0][0].getAsText() );
-        assertEquals( "INWATERA_1M/TILE_ID", featureId.getPropertyNames()[0][1].getAsText() );
+        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getProjectionClauses()[0][0].getPropertyName().getAsText() );
+        assertEquals( "INWATERA_1M/TILE_ID", featureId.getProjectionClauses()[0][1].getPropertyName().getAsText() );
 
-        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getPropertyNames()[1][0].getAsText() );
-        assertEquals( "INWATERA_1M/TILE_ID", featureId.getPropertyNames()[1][1].getAsText() );
+        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getProjectionClauses()[1][0].getPropertyName().getAsText() );
+        assertEquals( "INWATERA_1M/TILE_ID", featureId.getProjectionClauses()[1][1].getPropertyName().getAsText() );
 
-        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getPropertyNames()[2][0].getAsText() );
-        assertEquals( "INWATERA_1M/TILE_ID", featureId.getPropertyNames()[2][1].getAsText() );
+        assertEquals( "INWATERA_1M/WKB_GEOM", featureId.getProjectionClauses()[2][0].getPropertyName().getAsText() );
+        assertEquals( "INWATERA_1M/TILE_ID", featureId.getProjectionClauses()[2][1].getPropertyName().getAsText() );
     }
 
     /**
@@ -334,12 +336,12 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
         FeatureIdQuery featureQuery = (FeatureIdQuery) getFeature.getQueries().get( 0 );
-        assertEquals( "InWaterA_1M/wkbGeom", featureQuery.getPropertyNames()[0][0].getAsText() );
-        assertEquals( "InWaterA_1M/tileId", featureQuery.getPropertyNames()[0][1].getAsText() );
-        assertEquals( "InWaterA_1M/wkbGeom", featureQuery.getPropertyNames()[1][0].getAsText() );
-        assertEquals( "InWaterA_1M/tileId", featureQuery.getPropertyNames()[1][1].getAsText() );
-        assertEquals( "InWaterA_1M/wkbGeom", featureQuery.getPropertyNames()[2][0].getAsText() );
-        assertEquals( "InWaterA_1M/tileId", featureQuery.getPropertyNames()[2][1].getAsText() );
+        assertEquals( "InWaterA_1M/wkbGeom", featureQuery.getProjectionClauses()[0][0].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/tileId", featureQuery.getProjectionClauses()[0][1].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/wkbGeom", featureQuery.getProjectionClauses()[1][0].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/tileId", featureQuery.getProjectionClauses()[1][1].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/wkbGeom", featureQuery.getProjectionClauses()[2][0].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/tileId", featureQuery.getProjectionClauses()[2][1].getPropertyName().getAsText() );
         FeatureIdQuery featureId = (FeatureIdQuery) getFeature.getQueries().get( 0 );
         assertEquals( featureId.getFeatureIds()[0], "InWaterA_1M.1013" );
         assertEquals( featureId.getFeatureIds()[1], "InWaterA_1M.1014" );
@@ -396,8 +398,8 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
         FilterQuery filterq = (FilterQuery) getFeature.getQueries().get( 0 );
-        assertEquals( "InWaterA_1M/wkbGeom", filterq.getPropertyNames()[0].getAsText() );
-        assertEquals( "InWaterA_1M/tileId", filterq.getPropertyNames()[1].getAsText() );
+        assertEquals( "InWaterA_1M/wkbGeom", filterq.getProjectionClauses()[0].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/tileId", filterq.getProjectionClauses()[1].getPropertyName().getAsText() );
         OperatorFilter filter = (OperatorFilter) filterq.getFilter();
         assertTrue( filter.getOperator() instanceof Within );
         Within within = (Within) filter.getOperator();
@@ -464,12 +466,12 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         FilterQuery filterQuery = (FilterQuery) getFeature.getQueries().get( 0 );
         assertEquals( new QName( "INWATERA_1M" ), filterQuery.getTypeNames()[0].getFeatureTypeName() );
-        assertEquals( "INWATERA_1M/WKB_GEOM", filterQuery.getPropertyNames()[0].getAsText() );
-        assertEquals( "INWATERA_1M/TILE_ID", filterQuery.getPropertyNames()[1].getAsText() );
+        assertEquals( "INWATERA_1M/WKB_GEOM", filterQuery.getProjectionClauses()[0].getPropertyName().getAsText() );
+        assertEquals( "INWATERA_1M/TILE_ID", filterQuery.getProjectionClauses()[1].getPropertyName().getAsText() );
 
         filterQuery = (FilterQuery) getFeature.getQueries().get( 1 );
         assertEquals( new QName( "BUILTUPA_1M" ), filterQuery.getTypeNames()[0].getFeatureTypeName() );
-        assertEquals( "BUILTUPA_1M/*", filterQuery.getPropertyNames()[0].getAsText() );
+        assertEquals( "BUILTUPA_1M/*", filterQuery.getProjectionClauses()[0].getPropertyName().getAsText() );
     }
 
     /**
@@ -483,14 +485,14 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
         FilterQuery query0 = (FilterQuery) getFeature.getQueries().get( 0 );
-        ValueReference[] propNames0 = query0.getPropertyNames();
-        assertEquals( "InWaterA_1M/wkbGeom", propNames0[0].getAsText() );
-        assertEquals( "InWaterA_1M/tileId", propNames0[1].getAsText() );
+        ProjectionClause[] propNames0 = query0.getProjectionClauses();
+        assertEquals( "InWaterA_1M/wkbGeom", propNames0[0].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/tileId", propNames0[1].getPropertyName().getAsText() );
         assertEquals( new QName( "InWaterA_1M" ), query0.getTypeNames()[0].getFeatureTypeName() );
 
         FilterQuery query1 = (FilterQuery) getFeature.getQueries().get( 1 );
-        ValueReference[] propNames1 = query1.getPropertyNames();
-        assertEquals( "BuiltUpA_1M/*", propNames1[0].getAsText() );
+        ProjectionClause[] propNames1 = query1.getProjectionClauses();
+        assertEquals( "BuiltUpA_1M/*", propNames1[0].getPropertyName().getAsText() );
         assertEquals( new QName( "BuiltUpA_1M" ), query1.getTypeNames()[0].getFeatureTypeName() );
     }
 
@@ -540,9 +542,9 @@ public class GetFeatureKVPAdapterTest extends TestCase {
         assertEquals( "INWATERA_1M.1013", featureQuery.getFeatureIds()[0] );
         assertEquals( "BUILTUPA_1M.3456", featureQuery.getFeatureIds()[1] );
 
-        assertEquals( "INWATERA_1M/WKB_GEOM", featureQuery.getPropertyNames()[0][0].getAsText() );
-        assertEquals( "INWATERA_1M/TILE_ID", featureQuery.getPropertyNames()[0][1].getAsText() );
-        assertEquals( "BUILTUPA_1M/WKB_GEOM", featureQuery.getPropertyNames()[0][2].getAsText() );
+        assertEquals( "INWATERA_1M/WKB_GEOM", featureQuery.getProjectionClauses()[0][0].getPropertyName().getAsText() );
+        assertEquals( "INWATERA_1M/TILE_ID", featureQuery.getProjectionClauses()[0][1].getPropertyName().getAsText() );
+        assertEquals( "BUILTUPA_1M/WKB_GEOM", featureQuery.getProjectionClauses()[0][2].getPropertyName().getAsText() );
     }
 
     /**
@@ -556,10 +558,10 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
         FeatureIdQuery featureQuery = (FeatureIdQuery) getFeature.getQueries().get( 0 );
-        ValueReference[][] propNames = featureQuery.getPropertyNames();
-        assertEquals( "InWaterA_1M/wkbGeom", propNames[0][0].getAsText() );
-        assertEquals( "InWaterA_1M/tileId", propNames[0][1].getAsText() );
-        assertEquals( "BuiltUpA_1M/wkbGeom", propNames[1][0].getAsText() );
+        ProjectionClause[][] propNames = featureQuery.getProjectionClauses();
+        assertEquals( "InWaterA_1M/wkbGeom", propNames[0][0].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/tileId", propNames[0][1].getPropertyName().getAsText() );
+        assertEquals( "BuiltUpA_1M/wkbGeom", propNames[1][0].getPropertyName().getAsText() );
 
         String[] featureIds = featureQuery.getFeatureIds();
         assertEquals( "InWaterA_1M.1013", featureIds[0] );
@@ -606,14 +608,14 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
         FilterQuery filter0 = (FilterQuery) getFeature.getQueries().get( 0 );
-        ValueReference[] propNames = filter0.getPropertyNames();
-        assertEquals( "InWaterA_1M/wkbGeom", propNames[0].getAsText() );
-        assertEquals( "InWaterA_1M/tileId", propNames[1].getAsText() );
+        ProjectionClause[] propNames = filter0.getProjectionClauses();
+        assertEquals( "InWaterA_1M/wkbGeom", propNames[0].getPropertyName().getAsText() );
+        assertEquals( "InWaterA_1M/tileId", propNames[1].getPropertyName().getAsText() );
         assertEquals( new QName( "InWaterA_1M" ), filter0.getTypeNames()[0].getFeatureTypeName() );
 
         FilterQuery filter1 = (FilterQuery) getFeature.getQueries().get( 1 );
-        propNames = filter1.getPropertyNames();
-        assertEquals( "BuiltUpA_1M/wkbGeom", propNames[0].getAsText() );
+        propNames = filter1.getProjectionClauses();
+        assertEquals( "BuiltUpA_1M/wkbGeom", propNames[0].getPropertyName().getAsText() );
         assertEquals( new QName( "BuiltUpA_1M" ), filter1.getTypeNames()[0].getFeatureTypeName() );
 
         Operator op = ( (OperatorFilter) filter0.getFilter() ).getOperator();
@@ -642,9 +644,9 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
         FeatureIdQuery featureQuery = (FeatureIdQuery) getFeature.getQueries().get( 0 );
-        ValueReference[][] propNames = featureQuery.getPropertyNames();
-        assertEquals( "uk:Town/gml:name", propNames[0][0].getAsText() );
-        assertEquals( "uk:Town/gml:directedNode", propNames[0][1].getAsText() );
+        ProjectionClause[][] propNames = featureQuery.getProjectionClauses();
+        assertEquals( "uk:Town/gml:name", propNames[0][0].getPropertyName().getAsText() );
+        assertEquals( "uk:Town/gml:directedNode", propNames[0][1].getPropertyName().getAsText() );
         String[] featureIds = featureQuery.getFeatureIds();
         assertEquals( "t1", featureIds[0] );
         TypeName[] typeName = featureQuery.getTypeNames();
@@ -676,14 +678,14 @@ public class GetFeatureKVPAdapterTest extends TestCase {
 
         GetFeature getFeature = GetFeatureKVPAdapter.parse( kvpMap, null );
         FeatureIdQuery featureQuery = (FeatureIdQuery) getFeature.getQueries().get( 0 );
-        XLinkPropertyName[][] xlinkProps = featureQuery.getXLinkPropertyNames();
+        ProjectionClause[][] xlinkProps = featureQuery.getProjectionClauses();
         assertEquals( "uk:Town/gml:name", xlinkProps[0][0].getPropertyName().getAsText() );
-        assertEquals( "0", xlinkProps[0][0].getTraverseXlinkDepth() );
-        assertEquals( new Integer( 0 ), xlinkProps[0][0].getTraverseXlinkExpiry() );
+        assertEquals( "0", xlinkProps[0][0].getResolveParams().getResolveDepth() );
+        assertEquals( BigInteger.valueOf( 0 ), xlinkProps[0][0].getResolveParams().getResolveTimeout() );
 
         assertEquals( "uk:Town/gml:directedNode", xlinkProps[0][1].getPropertyName().getAsText() );
-        assertEquals( "2", xlinkProps[0][1].getTraverseXlinkDepth() );
-        assertEquals( new Integer( 2 ), xlinkProps[0][1].getTraverseXlinkExpiry() );
+        assertEquals( "2", xlinkProps[0][1].getResolveParams().getResolveDepth() );
+        assertEquals( BigInteger.valueOf( 120 ), xlinkProps[0][1].getResolveParams().getResolveTimeout() );
     }
 
     /**
